# Life-system-builder-

./: .gitignore  CLAUDE.md  README.md  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix  start-full-stack.sh  start_full_stack.py
artifacts/api-server/: .gitignore  ENVIRONMENT.md  main.py  render_test.py  requirements.txt  stress_test.py
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/authoring/: content_planner.py  genericity_guard.py  strategy_builder.py  worksheet_transformer.py
artifacts/api-server/contracts/: registry.json  system_architecture.json  worksheet_system.json
artifacts/api-server/core/: artifact_registry.py  budget_controller.py  config.py  contract_loader.py  contract_registry.py  logging.py  pipeline_orchestrator.py  prompt_assembler.py
artifacts/api-server/models/: branding_profile.py  project.py  render_artifact.py  stage_output.py  v2_artifacts.py  validation_result.py
artifacts/api-server/models_integration/: __init__.py  anthropic_provider.py  base.py  errors.py  json_repair.py  model_service.py  openai_provider.py  (+2 more)
artifacts/life-system-builder/: index.html  package.json
attached_assets/: Pasted--schema-https-json-schema-org-draft-2020-12-schema-id-h_1775334415444.txt  Pasted-Build-a-production-oriented-web-application-called-Life_1774921663017.txt  Pasted-You-are-an-automated-document-production-agent-Your-job_1775343648677.txt
docs/: architecture-v2-proposal.md  caregiver-marketing-test-prompt.md  columbia-restaurant-interview-test-prompt.md
lib/api-spec/: openapi.yaml
scripts/: post-merge.sh
(+152 files in other folders)
